--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 
     <body>
 
-        <!--<div style="background-image: url('/images/backg.jpg');"></div>-->
+        <div style="background-image: url('/images/2d.jpg');"></div>
 
         <header class="header">
             <a href="#" class="logo">RVNDEV</a>
             <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Skills</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="#" style="--i:1;"  class="active">Home</a>
+                <a href="#" style="--i:2;" >About</a>
+                <a href="#" style="--i:3;" >Skills</a>
+                <a href="#" style="--i:4;";>Projects</a>
+                <a href="#" style="--i:5;">Contact</a>
             </nav>
         </header>
 
         <section class="home">
             <div class="home-content">
-                <h3>Hello, It's Me</h3>
+                <h3>Hi, my name is</h3>
                 <h1>Heike Kotze</h1>  
                 <h3>And I'm a <span>Software Engineer</span></h3>  
-                <p>paragraph</p>
+                <p>Be the person you want everyone else to be.</p>
                 <div class="social-media">
                     <a href="#"><i class='bx bxl-facebook' ></i></a>
                     <a href="#"><i class='bx bxl-twitter' ></i></a>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="home-image">
-               <img src="/images/photo.png">
+               <img src="/images/purplecircle.png">
             </div>
 
         </section>
